--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +13,7 @@
 	<script src="js/index.js" defer></script>
 </head>
 <body>
+
 	<header class="header">
 		<div class="container header__container">
 			<img src="image/logo.svg" alt="" class="header__logo">
@@ -36,15 +37,47 @@
 
 		</div>
 	</header>
+
 	<main>
 		<section class="hero">
 			<div class="container hero__container">
 				<h1 class="hero__title">Crypto</h1>
-				<h2 class="hero__subtitle">Ваш самый надежный сервис обмена криптовалюты</h2>
-				<a href="#"" class="hero__btn">Зарегистрироваться</a>
+				<p class="hero__subtitle">Ваш самый надежный сервис обмена криптовалюты</p>
+				<button href="#"" class="hero__btn">Зарегистрироваться</button>
 			</div>
 		</section>
 	</main>
+
+	<div class="overlay overlay_open">
+		<div class="modal modal_open">
+			<div class="modal__container">
+				<h2 class="modal__title">Мгновенная регистрация на платформе</h2>
+
+				<form class="modal__form">
+					<fieldset class="modal__fieldset">
+						<label class="modal__label">Имя
+							<input type="text" name="name" class="modal__input">
+						</label>
+						<label class="modal__label">Фамилия
+							<input type="text" name="surname" class="modal__input">
+						</label>
+						<label class="modal__label">Номер телефона
+							<input type="text" name="tel" class="modal__input">
+						</label>
+					</fieldset>
+
+					<button class="modal__button" type="submit">Зарегистрироваться!</button>
+
+					<button class="modal__close" aria-label="Закрыть модальное окно">
+						<svg width="32" height="32" viewbox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" fill="currentColor" type="button">
+							<path d="M16 2C8.2 2 2 8.2 2 16C2 23.8 8.2 30 16 30C23.8 30 30 23.8 30 16C30 8.2 23.8 2 16 2ZM21.4 23L16 17.6L10.6 23L9 21.4L14.4 16L9 10.6L10.6 9L16 14.4L21.4 9L23 10.6L17.6 16L23 21.4L21.4 23Z"/>
+						</svg>							
+					</button>
+				</form>
+			</div>
+		</div>
+	</div>
+
 	<footer></footer>
 </body>
 </html>
