--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<link rel="preload" href="fonts/ibm-plex-sans-v14-latin_cyrillic-300.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="stylesheet" href="css/index.css">
 	<title>Crypto - Ваш самый надежный сервис обмена криптовалюты</title>
-	<script src="js/index.js" defer></script>
+	<!-- <script src="js/index.js" defer></script> -->
+	<script src="js/index.js" type="module"></script>
 </head>
 <body>
 
@@ -48,8 +49,8 @@
 		</section>
 	</main>
 
-	<div class="overlay overlay_open">
-		<div class="modal modal_open">
+	<div class="overlay">
+		<div class="modal">
 			<div class="modal__container">
 				<h2 class="modal__title">Мгновенная регистрация на платформе</h2>
 
@@ -68,12 +69,14 @@
 
 					<button class="modal__button" type="submit">Зарегистрироваться!</button>
 
-					<button class="modal__close" aria-label="Закрыть модальное окно">
-						<svg width="32" height="32" viewbox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" fill="currentColor" type="button">
-							<path d="M16 2C8.2 2 2 8.2 2 16C2 23.8 8.2 30 16 30C23.8 30 30 23.8 30 16C30 8.2 23.8 2 16 2ZM21.4 23L16 17.6L10.6 23L9 21.4L14.4 16L9 10.6L10.6 9L16 14.4L21.4 9L23 10.6L17.6 16L23 21.4L21.4 23Z"/>
-						</svg>							
-					</button>
 				</form>
+
+				<button class="modal__close" aria-label="Закрыть модальное окно">
+					<svg width="32" height="32" viewbox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" fill="currentColor" type="button">
+						<path d="M16 2C8.2 2 2 8.2 2 16C2 23.8 8.2 30 16 30C23.8 30 30 23.8 30 16C30 8.2 23.8 2 16 2ZM21.4 23L16 17.6L10.6 23L9 21.4L14.4 16L9 10.6L10.6 9L16 14.4L21.4 9L23 10.6L17.6 16L23 21.4L21.4 23Z"/>
+					</svg>							
+				</button>
+				
 			</div>
 		</div>
 	</div>
