Add footer markup and styles

--- a/index.html
+++ b/index.html
@@ -76,11 +76,35 @@
 						<path d="M16 2C8.2 2 2 8.2 2 16C2 23.8 8.2 30 16 30C23.8 30 30 23.8 30 16C30 8.2 23.8 2 16 2ZM21.4 23L16 17.6L10.6 23L9 21.4L14.4 16L9 10.6L10.6 9L16 14.4L21.4 9L23 10.6L17.6 16L23 21.4L21.4 23Z"/>
 					</svg>							
 				</button>
-				
+
 			</div>
 		</div>
 	</div>
 
-	<footer></footer>
+	<footer class="footer">
+
+		<div class="container footer__container">
+			<div class="footer__column footer__column_first first-column">
+				<img src="./image/logo.svg" alt="Logo" class="first-column__img">
+				<p class="first-column__copyright">© Crypto, <span>2022</span></p>
+			</div>
+	
+			<div class="navigation footer-navigation footer__column footer__column_second">
+				<ul class="navigation__list footer-navigation__list">
+					<li class="navigation__item footer-navigation__item">
+						<a href="#" class="navigation__link footer-navigation__link">Почему выбирают нас?</a>
+					</li>
+					<li class="navigation__item footer-navigation__item">
+						<a href="#" class="navigation__link footer-navigation__link">Частые вопросы</a>
+					</li>
+				</ul>			
+			</div>
+	
+			<div class="telegram footer__column footer__column_third">
+				<a href="t.me/@Mrshmallowww" class="telegram__link">@Mrshmallowww</a>
+			</div>
+		</div>
+
+	</footer>
 </body>
 </html>
