Add footer media queries

--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
 	<footer class="footer">
 
 		<div class="container footer__container">
-			<div class="footer__column footer__column_first first-column">
-				<img src="./image/logo.svg" alt="Logo" class="first-column__img">
-				<p class="first-column__copyright">© Crypto, <span>2022</span></p>
+			<div class="footer__column footer__column_first img-wrapper">
+				<img src="./image/logo.svg" alt="Logo" class="img-wrapper__img">
+			</div>
+			<div class="footer__column footer__column_first copyright">
+				<p class="copyright__text">© Crypto, <span>2022</span></p>
 			</div>
 	
 			<div class="navigation footer-navigation footer__column footer__column_second">
