--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			</div>
 	
 			<div class="telegram footer__column footer__column_third">
-				<a href="t.me/@Mrshmallowww" class="telegram__link">@Mrshmallowww</a>
+				<a href="https://t.me/Mrshmallowww" class="telegram__link">@Mrshmallowww</a>
 			</div>
 		</div>
 
